feat: Add decimal logical type to const field gen

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -4,5 +4,5 @@ assumeStandardLibraryStripMargin = true
 align.openParenDefnSite = false
 align.openParenCallSite = false
 newlines.alwaysBeforeTopLevelStatements = true
-indentOperator = spray
+preset = default
 rewrite.rules = [ExpandImportSelectors]
